--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,19 +1,32 @@
 .footer {
     width: 100%;
-    text-align: center;
-    font-size: clamp(0.9rem, 2.5vw, 1.2rem);
     padding: 0.8rem;
     background-color: rgba(0, 0, 0, 0.8);
     position: fixed;
     bottom: 0;
     left: 0;
     backdrop-filter: blur(5px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
 }
 
 .footer p {
     color: #ffffff;
     margin: 0;
-    padding: 0 1rem;
+    font-size: clamp(0.9rem, 2.5vw, 1.2rem);
+}
+
+.copy {
+    display: flex;
+    align-items: center;
+}
+
+.copy svg {
+    width: 20px;
+    height: 20px;
+    color: #ffffff;
 }
 
 @media screen and (max-width: 768px) {
